			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1855 2001/08/31 06:23:51 jinmei Exp $

<200108>
2001-08-31  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/{in6.c in6_ifattach.c, nd6_rtr.c}: revised the
	support of the privacy extension of stateless address
	configuration, based on draft-ietf-ipngwg-temp-addresses-v2-00.
	See Section 8. of the document to see feature changes.
	* kame/sys/netinet6/in6_var.h: added a new member "ia6_createtime"
	to the in6_ifaddr structure with the change above, in order to
	record the time of creation of an address.  This member is set for
	all addresses, but is only referred for temporary addresses.

2001-08-30  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sys/netinet/tcp_input.c (tcp_rtlookup): always used
	rtcalloc() so that both active and passive connections would make
	cloned host routes.  The previous code, which called rtalloc(),
	should not have severe bad effects, but using rtcalloc() is more
	suitable to bsdi's logic.

2001-08-28  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/ndp/ndp.c (ifinfo):
	- printed the values of ND6_IFF_ACCEPT_RTADV and
	  ND6_IFF_PREFER_SOURCE by 'ndp -i IF'
	- allowed a user to specify the flag bits by
	  'ndp -i IF [-]accept_rtadv' or
	  'ndp -i IF [-] prefer_source', respectively.

2001-08-28  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.h:
	* kame/sys/netinet6/in6_src.c (in6_selectsrc):
	introduced a new flag bit "ND6_IFF_PREFER_SOURCE" in the nd_ifinfo
	structure, in order to specify "preferred" interfaces for source
	address selection.

2001-08-28  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.[ch]:
	* kame/sys/netinet6/nd6_rtr.c (nd6_ra_input):
	introduced a new flag bit "ND6_IFF_ACCEPT_RTADV" in the nd_ifinfo
	structure, in order to control whether to accept RAs per-interface
	basis.  The kernel now accepts RAs only when
	net.inet6.ip6.accept_rtadv is 1 and the flag is on the receiving